# s63_pi

./: .travis.yml  CMakeLists.txt  NSIS.template.in  Notes  Plugin.cmake  README  VERSION.cmake  appveyor.yml  build-conf.rc  config.h.in  pkg_version.sh  s63-plugin-ubuntu-x86_64-18.04.xml  s63-plugin.xml.in  userpermit.h
.circleci/: config.yml
build-deps/: control  opencpn-deps.spec
buildlinux/OCPNsenc/: OCPNsenc
buildlinux64/OCPNsenc/: OCPNsenc
buildlinuxarm/OCPNsenc/: OCPNsenc
buildlinuxarm64/OCPNsenc/: OCPNsenc
buildosx/InstallOSX/: S-63_plug-in_erklaert-0_4.rtf  S-63_plug-in_explained-0_4en.rtf  S-63_plug-in_explained-cz.rtf  S-63_plug-in_explained-es.rtf  s63_pi.pkgproj.in
buildosx/OCPNsenc/: OCPNsenc
buildosx/S63-InstallOSX/: Readme.txt  S-63_plug-in_explained-fr.rtf  S-63_plug-in_explained-it.rtf  S-63_plug-in_explained-nl.rtf  S63.pkgproj  S63.pkgproj.in
buildwin/: win_deps.bat
buildwin/NSIS_Unicode/Include/: Langstrings_CHINESETW.nsh  Langstrings_CZECH.nsh  Langstrings_DANISH.nsh  Langstrings_DUTCH.nsh  Langstrings_FINNISH.nsh  Langstrings_FRENCH.nsh  Langstrings_GERMAN.nsh  Langstrings_HUNGARIAN.nsh  Langstrings_ITALIAN.nsh  Langstrings_NORWEGIAN.nsh  Langstrings_POLISH.nsh  Langstrings_PORTUGUESE.nsh  Langstrings_PORTUGUESEBR.nsh  Langstrings_RUSSIAN.nsh  Langstrings_SPANISH.nsh  Langstrings_SWEDISH.nsh  Langstrings_TURKISH.nsh
buildwin/NSIS_Unicode/Language files/: Langstrings_CHINESETW.nsh.in  Langstrings_CZECH.nsh.in  Langstrings_FRENCH.nsh.in  Langstrings_FRENCH.nsh.in.orig  Langstrings_GERMAN.nsh.in  Langstrings_ITALIAN.nsh.in  Langstrings_POLISH.nsh.in  Langstrings_RUSSIAN.nsh.in  Langstrings_SPANISH.nsh.in  Langstrings_TURKISH.nsh.in.orig
ci/: appveyor-upload.sh  appveyor.bat  circleci-build-android.sh  circleci-build-bionic-armhf.sh  circleci-build-buster-armhf.sh  circleci-build-debian-arm64.sh  circleci-build-debian-armhf.sh  circleci-build-debian-armxx.sh  circleci-build-debian-docker.sh  circleci-build-debian.sh  circleci-build-flatpak-x86-64-1808.sh  circleci-build-flatpak-x86-64-2008.sh  circleci-build-flatpak-x86-64-2208.sh  circleci-build-flatpak.sh  circleci-build-macos.sh  circleci-build-mingw.sh  circleci-build-trusty.sh  circleci-upload-flatpak.sh  circleci-upload-macos.sh  circleci-upload.sh  docker-build-flatpak-x86-64-1808.sh  docker-build-flatpak-x86-64-2008.sh  docker-build-flatpak-x86-64-2208.sh  docker-build-mingw.sh  travis-build-raspbian-armhf.sh  travis-build-ubuntu-arm64.sh
cmake/: GetArch.cmake  Metadata.cmake  PluginCompiler.cmake  PluginConfigure.cmake  PluginInstall.cmake  PluginLibs.cmake  PluginOptions.cmake  PluginPackage.cmake  PluginSetup.cmake  SimpleWxConfig.cmake  TemplateVersion  version.h.in
flatpak/: OCPNsenc  README.md  org.opencpn.OpenCPN.Plugin.s63.yaml
libs/OCPNsenc/: CMakeLists.txt
libs/OCPNsenc/linux64/: OCPNsenc
libs/OCPNsenc/linuxarm64/: OCPNsenc
libs/OCPNsenc/osx/: OCPNsenc
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc  s63_vector_charts.adoc
manual/s63_vector_charts/: antora.yml  site.yml
po/: POTFILES.in  de_DE.po  es_ES.po  fi_FI.po  fr_FR.po  it_IT.po  nb_NO.po  pl_PL.po  ru_RU.po  s63_pi.pot  s63_pi_ca_ES.po  s63_pi_cs_CZ.po  s63_pi_da_DK.po  s63_pi_de_DE.po  s63_pi_el_GR.po  s63_pi_es_ES.po  s63_pi_et_EE.po  s63_pi_et_ET.po  s63_pi_fi_FI.po  s63_pi_fr_FR.po  s63_pi_gl_ES.po  s63_pi_hu_HU.po  s63_pi_it_IT.po  s63_pi_ja_JP.po  s63_pi_nb_NO.po  s63_pi_nl_NL.po  s63_pi_pl_PL.po  s63_pi_pt_BR.po  s63_pi_pt_PT.po  s63_pi_ru_RU.po  s63_pi_sv_SE.po  s63_pi_tr_TR.po  s63_pi_vi_VN.po  s63_pi_zh_TW.po  sv_SE.po
src/: InstallDirs.cpp  InstallDirs.h  TexFont.cpp  mygeom63.cpp  mygeom63.h  ocpn_plugin.h  pi_s52s57.h  s63_pi.cpp  s63_pi.h  s63chart.cpp  s63chart.h  tri.c
src/wxJSON/: json_defs.h  jsonreader.cpp  jsonval.cpp  jsonwriter.cpp
